fix: slides caption layout issue

--- a/docs/_sass/components/_slides.scss
+++ b/docs/_sass/components/_slides.scss
@@ -46,7 +46,7 @@
     &__caption {
       color: $color-primary-dark;
       font-size: $font-size-medium;
-      padding: 0.8rem 1.2rem;
+      padding: 0rem 1.2rem 0.8rem 1.2rem;
       width: 100%;
       text-align: center;
     }
